--- a/HuntNet/lib/nblibraries.properties
+++ b/HuntNet/lib/nblibraries.properties
@@ -31,3 +31,7 @@ libs.javaee-endorsed-api-7.0.classpath=\
 libs.javaee-endorsed-api-7.0.displayName=Java EE 7 Endorsed API Library
 libs.javaee-endorsed-api-7.0.javadoc=\
     ${base}/javaee-endorsed-api-7.0/javaee-doc-api.jar
+libs.SNMP.classpath=\
+    ${base}/SNMP/snmp4j-2.4.3.jar
+libs.SNMP.javadoc=\
+    ${base}/SNMP/snmp4j-2.4.3-javadoc.jar!//
