--- a/HuntNet/web/WEB-INF/web.xml
+++ b/HuntNet/web/WEB-INF/web.xml
@@ -6,6 +6,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>production/index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
